# device-monitor

./: .gitignore  Makefile  Makefile.am  configure.ac  fsroot.c  fsroot.h  fuse.c  hash.c  hash.h  main.c  mm.c  mm.h  netlink.c
Archivo_linux_ModCifrado/: ModCifradoSO.cpp  ModCifradoSO.h  ModCifrado_ejecutable  README.txt
Archivos_android/: .ModCifradoSO.h.swp  Crear_Libreria_android.sh  ModCifrado.cpp  ModCifradoSO.cpp  ModCifradoSO.h  ModCifrado_ejecutable  README.txt
tests/: Makefile.am  check_fsroot.c  check_fsroot_1.c  test_fsroot_chmod_chown.c  test_fsroot_create.c  test_fsroot_getattr.c  test_fsroot_mkdir.c  test_fsroot_rename.c  test_fsroot_symlink.c
